--- a/GreenBowlFoodsSystem/Views/Users/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/Users/Index.cshtml
@@ -6,27 +6,53 @@
 
 <div class="container-fluid animate-fade-up">
 
-    <div class="d-flex justify-content-between align-items-center mb-4">
-        <div>
+    <div class="d-none d-print-block text-center mb-4 ">
+        <h1>System Users Report</h1>
+        <p>Generated: @DateTime.Now.ToString("dd MMM yyyy HH:mm")</p>
+        <hr />
+    </div>
+
+    <div class="d-flex justify-content-between align-items-center mb-4 d-print-none">
+         <div>
             <h1 class="display-6 fw-bold text-white">System Users</h1>
             <p class="text-white-50">Manage access and employee roles.</p>
-        </div>
-        <a asp-action="Create" class="btn btn-primary shadow-lg rounded-pill px-4" style="background-color: #10b981; border: none;">
-            <i class="bi bi-person-plus-fill me-2"></i> New User
-        </a>
+         </div>
+         <div class="d-flex gap-2">
+           <button onclick="window.print()" class="btn btn-outline-info rounded-pill px-4 me-2">
+              <i class="bi bi-printer-fill me-2"></i> Print Report
+            </button>
+            <a asp-action="Create" class="btn btn-primary shadow-lg rounded-pill px-4">
+              <i class="bi bi-plus-lg me-2"></i> New User
+            </a>
+         </div>
+    </div>
+
+    <div class="card bg-transparent border-0 mb-4 animate-fade-up d-print-none" style="animation-delay: 0.05s;">
+        <form asp-action="Index" method="get">
+            <div class="input-group shadow-sm">
+                <span class="input-group-text bg-dark border-secondary text-white-50">
+                    <i class="bi bi-search"></i>
+                </span>
+                <input type="text" name="searchString" class="form-control bg-dark border-secondary text-white"
+                       placeholder="Search Name or Email or Role..."
+                       value="@ViewData["CurrentFilter"]" />
+                <button type="submit" class="btn btn-outline-success text-white">Search</button>
+                <a asp-action="Index" class="btn btn-outline-success text-white align-content-center">Clean</a>
+            </div>
+        </form>
     </div>
 
     <div class="card shadow-lg border-0" style="background: #1e293b;">
         <div class="card-body p-0">
             <div class="table-responsive">
-                <table class="table table-dark table-hover mb-0 align-middle">
+                <table class="table table-dark table-hover mb-0 align-middle" id="myTable">
                     <thead class="text-white-50 small text-uppercase" style="background-color: rgba(0,0,0,0.2);">
                         <tr>
                             <th class="ps-4 py-3">Employee Name</th>
                             <th>Email (Login)</th>
                             <th>Phone</th>
                             <th>Role</th>
-                            <th class="text-end pe-4">Actions</th>
+                            <th class="text-end pe-4 d-print-none">Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -36,7 +62,7 @@
                                 <td class="ps-4">
                                     <div class="d-flex align-items-center">
                                         <div class="rounded-circle bg-secondary d-flex align-items-center justify-content-center me-3" style="width: 40px; height: 40px;">
-                                            <i class="bi bi-person-fill text-white"></i>
+                                            <i class="bi bi-person-fill text-info"></i>
                                         </div>
                                         <div>
                                             <h6 class="mb-0 text-white fw-bold">@item.FullName</h6>
@@ -62,13 +88,13 @@
                                 </td>
                                 <td class="text-end pe-4">
                                     <div class="btn-group">
-                                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-light border-0 text-warning" title="Edit">
+                                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-light border-0 text-warning d-print-none" title="Edit">
                                             <i class="bi bi-pencil-square fs-5"></i> Edit
                                         </a>
-                                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-outline-light border-0 text-info" title="Details">
+                                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-outline-light border-0 text-info d-print-none" title="Details">
                                             <i class="bi bi-info-circle fs-5"></i> Details
                                         </a>
-                                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-light border-0 text-danger" title="Delete">
+                                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-light border-0 text-danger d-print-none" title="Delete">
                                             <i class="bi bi-trash fs-5"></i> Delete
                                         </a>
                                     </div>
@@ -81,3 +107,50 @@
         </div>
     </div>
 </div>
+
+                                        @section Scripts  {
+    <script>
+         // $('#myTable').DataTable();
+         $(document).ready(function () {
+            $('#myTable').DataTable({
+                "paging": true,          // Activa paginación
+                "lengthChange": true,   // Oculta el "Ver 10 registros"
+                "searching": false,       // Activa buscador (puedes quitar el tuyo si quieres)
+                "ordering": true,        // Activa ordenamiento por columnas
+                "info": true,            // Muestra "Showing 1 of 10"
+                "autoWidth": true,
+                "pageLength": 5,        // Registros por página
+                "lengthMenu": [[5, 10, 25, 50, -1],[5, 10, 25, 50, "All"]],
+                "language": {
+                    "search": "",        // Quita la palabra "Search:"
+                    "searchPlaceholder": "Filter records..."
+                }
+            });
+        });
+    </script>
+}
+
+<style>
+    /* Estilos de Impresión */
+    @@media print {
+         body { background-color: white !important; color: black !important; }
+        .card { box-shadow: none !important; border: 1px solid #ddd !important; }
+        .text-white, .text-white-50, .text-info, .text-warning { color: black !important; }
+        .text-print-dark { color: black !important; }
+        .badge { border: 1px solid #000; color: black !important; background: none !important; } */
+        .d-print-none { display: none !important; }
+        .table { color: black !important; }
+        thead th { background-color: #f0f0f0 !important; color: black !important; border-bottom: 2px solid #000; }
+       /* Hide DataTables controls only when printing */
+        .dataTables_wrapper .dataTables_length, 
+        .dataTables_wrapper .dataTables_filter, 
+        .dataTables_wrapper .dataTables_info, 
+        .dataTables_wrapper .dataTables_paginate {
+            display: none !important;
+        }
+       /* Optional: Ensure table takes full width on paper */
+   /*      table.dataTable {
+            width: 100% !important;
+        } */
+    }
+</style>
