--- a/GreenBowlFoodsSystem/Views/ProductionBatches/Details.cshtml
+++ b/GreenBowlFoodsSystem/Views/ProductionBatches/Details.cshtml
@@ -8,7 +8,7 @@
 <div class="row justify-content-center">
     <div class="col-md-10">
         <div class="text-center mb-4 animate-fade-up">
-            <h1 class="display-6 fw-bold text-white">Prodcution Batch Report</h1>
+            <h1 class="display-6 fw-bold text-white">Production Batch Report</h1>
             <p class="text-warning font-monospace fw-bold">@Model.BatchNumber</p>
         </div>
 
